add land animation, make platform speed automatically update, increase platform speed with score, update TODO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head> 
     <meta charset="UTF-8" />
     <title>Skylifts</title>
+    <link rel="icon" type="image/png" href="http://frontfish.net/favicon.png">
     <script type="text/javascript" src="assets/js/phaser.min.js"></script>
     <script type="text/javascript" src="game/boot.js"></script>
     <script type="text/javascript" src="game/load.js"></script>
