more mobile stuff

--- a/mobile.html
+++ b/mobile.html
@@ -53,10 +53,12 @@
 
      div {
        display: table;
-       margin: 100px auto;
+       margin: auto;
      }
     </style>
   </head>
-  <body id = "game">
+  <body>
+    <div id="game"></div>
+    <div id="orientation"></div>
   </body>
 </html>
