move game/ to src/, remove end.js

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <title>Skylifts</title>
     <link rel="icon" type="image/png" href="http://frontfish.net/favicon.png">
     <script type="text/javascript" src="assets/js/phaser.min.js"></script>
-    <script type="text/javascript" src="game/boot.js"></script>
-    <script type="text/javascript" src="game/load.js"></script>
-    <script type="text/javascript" src="game/menu.js"></script>
-    <script type="text/javascript" src="game/play.js"></script>
-    <script type="text/javascript" src="game/end.js"></script>
-    <script type="text/javascript" src="game/game.js"></script>
+    <script type="text/javascript" src="src/boot.js"></script>
+    <script type="text/javascript" src="src/load.js"></script>
+    <script type="text/javascript" src="src/menu.js"></script>
+    <script type="text/javascript" src="src/play.js"></script>
+    <script type="text/javascript" src="src/game.js"></script>
     <style type="text/css">
      body {
        margin: 0;
